# lunco-sim

./: AGENTS.md  Cargo.toml  README.md
assets/components/mobility/: motor.usda  wheel.usda
assets/components/power/: battery.usda  power_bus.usda  solar_panel.usda
assets/missions/: artemis_2.usda  rucheyok_sandbox.usda
assets/models/: AnnotatedRocketStage.mo
assets/scenes/sandbox/: joint_test.usda  sandbox_scene.usda  twin.toml
assets/vessels/balloons/: modelica_balloon.usda  python_balloon.usda
assets/vessels/rovers/: ackermann_rover.usda  skid_rover.usda
crates/lunco-api/: Cargo.toml
crates/lunco-api/src/: executor.rs  lib.rs
crates/lunco-assets/: Cargo.toml
crates/lunco-assets/src/: download.rs  lib.rs  process.rs
crates/lunco-attributes/: Cargo.toml  README.md
crates/lunco-attributes/src/: lib.rs
crates/lunco-avatar/: Cargo.toml
crates/lunco-avatar/src/: commands.rs  lib.rs
crates/lunco-cache/: Cargo.toml  README.md
crates/lunco-cache/src/: lib.rs
crates/lunco-canvas/: Cargo.toml  README.md
crates/lunco-canvas/src/: canvas.rs  event.rs  layer.rs  lib.rs  overlay.rs  scene.rs  tool.rs  visual.rs
crates/lunco-canvas/src/renderer/: egui_backend.rs  mod.rs  vello_backend.rs
crates/lunco-celestial/: Cargo.toml
crates/lunco-celestial-ephemeris/: Cargo.toml
crates/lunco-celestial-ephemeris/src/: lib.rs
crates/lunco-celestial/src/: commands.rs  coords.rs  embedded_assets.rs  ephemeris.rs  gravity.rs  lib.rs
crates/lunco-client/: Cargo.toml  README.md
crates/lunco-client/src/: code_panel.rs  main.rs  models_palette.rs
crates/lunco-command-macro/: Cargo.toml  README.md
crates/lunco-command-macro/src/: lib.rs
crates/lunco-controller/: Cargo.toml  README.md
crates/lunco-core/: Cargo.toml  README.md
crates/lunco-core/src/: diagram.rs  lib.rs  telemetry.rs
crates/lunco-cosim/: Cargo.toml
crates/lunco-cosim/src/: avian.rs  component.rs  connection.rs  lib.rs  suggestion.rs
crates/lunco-doc/: Cargo.toml
crates/lunco-doc-bevy/: Cargo.toml  README.md
crates/lunco-doc-bevy/src/: lib.rs
crates/lunco-doc/src/: domain_engine.rs  lib.rs  refindex.rs
crates/lunco-environment/: Cargo.toml
crates/lunco-experiments/: Cargo.toml
crates/lunco-experiments/src/: lib.rs
crates/lunco-fsw/: Cargo.toml  README.md
crates/lunco-hardware/: Cargo.toml  README.md
crates/lunco-hardware/src/: lib.rs
crates/lunco-materials/: Cargo.toml
crates/lunco-mobility/: Cargo.toml  README.md
crates/lunco-mobility/src/: lib.rs
crates/lunco-modelica/: Cargo.toml  README.md
crates/lunco-modelica/src/: annotations.rs  api_edits.rs  api_queries.rs  ast_extract.rs  class_cache.rs  class_metadata.rs  class_ref.rs  diagram.rs  document.rs  engine.rs  engine_resource.rs  experiments_runner.rs  icon_transform.rs  icon_warmer.rs  index.rs  indexer.rs  journal.rs  lib.rs  library_fs.rs  msl_remote.rs  msl_settings.rs  pretty.rs  source_roots.rs  text_diff.rs  visual_diagram.rs  worker.rs  worker_transport.rs
crates/lunco-modelica/tests/: annotated_rocket_stage.rs  ast_extract_bounds.rs  ast_mut_batch3a.rs  ast_mut_batch3b_simple.rs  ast_mut_graphics.rs  ast_mut_set_parameter.rs  ast_mut_set_placement.rs  ast_mut_topology.rs  ast_ops_complexity.rs  ast_roundtrip.rs  cross_truth_policy.rs  op_to_patch_batch3a.rs  op_to_patch_set_parameter_placement.rs  op_to_patch_topology.rs  rumoca_api_coverage.rs  tab_management.rs
crates/lunco-modelica/web/: index.html  worker_bootstrap.js
crates/lunco-networking/: Cargo.toml
crates/lunco-obc/: Cargo.toml  README.md
crates/lunco-robotics/: Cargo.toml  README.md
crates/lunco-robotics/src/: rover.rs
crates/lunco-sandbox-edit/: Cargo.toml
crates/lunco-sandbox-edit/src/: commands.rs  gizmo.rs  lib.rs  overlay.rs  perf_bridge.rs  physics_viz.rs  spawn.rs
crates/lunco-scripting/: Cargo.toml
crates/lunco-scripting/src/: lib.rs  repl.rs
crates/lunco-settings/: Cargo.toml
crates/lunco-settings/src/: lib.rs
crates/lunco-storage/: Cargo.toml
crates/lunco-storage/src/: lib.rs  picker.rs
crates/lunco-telemetry/: Cargo.toml  README.md
crates/lunco-telemetry/src/: lib.rs
crates/lunco-terrain/: Cargo.toml
crates/lunco-theme/: Cargo.toml
crates/lunco-theme/src/: fonts.rs  lib.rs
crates/lunco-twin/: Cargo.toml
crates/lunco-twin-journal/: Cargo.toml
crates/lunco-twin-journal/src/: lib.rs
crates/lunco-twin/src/: document_kind_registry.rs  file_kind.rs  lib.rs
crates/lunco-ui/: ARCHITECTURE.md  Cargo.toml  README.md
crates/lunco-ui/src/: lib.rs
crates/lunco-ui/src/busy/: mod.rs  spinner.rs  widget.rs
crates/lunco-ui/src/diagrams/: mod.rs
crates/lunco-ui/src/modal/: host.rs  mod.rs
crates/lunco-usd/: Assets.toml  Cargo.toml
crates/lunco-usd-avian/: Cargo.toml
crates/lunco-usd-avian/src/: lib.rs
crates/lunco-usd-bevy/: AGENTS.md  Cargo.toml
crates/lunco-usd-bevy/src/: lib.rs
crates/lunco-usd-composer/: Cargo.toml
crates/lunco-usd-composer/src/: lib.rs
crates/lunco-usd-sim/: Cargo.toml
crates/lunco-usd-sim/src/: cosim.rs  lib.rs
crates/lunco-usd/src/: commands.rs  document.rs  lib.rs  registry.rs  text_edit.rs
crates/lunco-viz/: Cargo.toml
crates/lunco-viz/src/: panel.rs  signal.rs  viz.rs
crates/lunco-workbench/: Cargo.toml  build.rs
crates/lunco-workbench/examples/: hello_workbench.rs
crates/lunco-workbench/src/: file_ops.rs  files_panel.rs  lib.rs  panel.rs  perf_hud.rs  perspective.rs  picker.rs  session.rs  status_bus.rs  theme_command.rs  tracked_task.rs  window_command.rs
crates/lunco-workbench/src/twin_browser/: files_section.rs  mod.rs
crates/lunco-workspace/: Cargo.toml
crates/lunco-workspace/src/: lib.rs  recents.rs
docs/: USD_SYSTEM.md  WEB_BUILD.md  api.md  crates_index.md  lunica.md
docs/architecture/: 00-overview.md  01-ontology.md  11-workbench.md  13-twin-and-workflow.md  16-runtime-ui-twin-backend.md  20-domain-modelica.md  25-experiments.md  30-wasm-web-worker.md
scripts/: build_rover.sh  build_web.sh  check_no_bare_spawn.sh  deploy_web.sh
skills/test-via-api/: SKILL.md
tests/api/: agent_workflow.sh
(+123 files in other folders)
