[package]
name = "lunco-doc-bevy"
version = "0.1.0"
edition = "2021"
description = "Bevy integration for the LunCoSim Document System — generic document-lifecycle events and the Twin-level change journal."

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
# `Command`, `on_command`, `register_commands` macro re-exports.
lunco-core = { path = "../lunco-core" }
lunco-doc = { path = "../lunco-doc" }
# `std::time::Instant::now()` panics on wasm32-unknown-unknown.
web-time = { workspace = true }
