[package]
name = "lunco-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
lunco-doc = { path = "../lunco-doc" }
# `handle_script_request` observes `lunco_api::ScriptRequestEvent` so the
# remote-scripting path can fire scripts through the API layer. Default
# features (`transport-http`) are disabled here — scripting only needs
# the event type, not the HTTP server, so we avoid pulling axum/tokio
# into every scripting consumer.
lunco-api = { path = "../lunco-api", default-features = false }
pyo3 = { version = "0.23", optional = true }
libloading = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["python"]
python = ["dep:pyo3", "dep:libloading"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5"

[lints]
workspace = true
