[package]
name = "lunco-settings"
version = "0.1.0"
edition = "2021"
description = "Centralised user-settings system for LunCoSim. One JSON file (~/.lunco/settings.json), namespaced sections, auto-persist on change."

[dependencies]
bevy = { workspace = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lunco-assets = { path = "../lunco-assets" }

# Wasm-only: persist settings to `localStorage` instead of disk
# (`std::fs::write` panics on `wasm32-unknown-unknown` for relative
# paths and silently no-ops for absolute ones). Same JSON shape on
# both sides — see `wasm_storage_read`/`wasm_storage_write` in lib.rs.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
