[package]
name = "lunco-theme"
version = "0.1.0"
edition = "2021"
description = "Core design tokens and theming system for LunCoSim"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
catppuccin-egui = { workspace = true }
lunco-assets = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

# Wasm-only: fetch DejaVu Sans TTF over HTTP at runtime (the font is
# served at `/fonts/DejaVuSans.ttf` by the page bundle — see the copy
# step in `scripts/build_web.sh`). Native loads from the workspace
# cache via `std::fs` instead.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Response"] }
