[package]
name = "lunco-ui"
version = "0.1.0"
edition = "2021"
description = "Thin UI adapter layer for LunCoSim on top of bevy_workbench"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
lunco-workbench = { path = "../lunco-workbench" }
lunco-theme = { path = "../lunco-theme" }
lunco-core = { path = "../lunco-core" }
lunco-celestial = { path = "../lunco-celestial" }
lunco-avatar = { path = "../lunco-avatar" }
chrono = { workspace = true }
egui_plot = "0.34"
