[package]
name = "lunco-workbench"
version = "0.1.0-dev"
edition = "2021"
build = "build.rs"
description = "LunCoSim's own workbench shell — activity bar, side browsers, central viewport, right inspector, bottom dock, status bar. Native replacement for bevy_workbench."

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
lunco-theme = { path = "../lunco-theme" }
egui_dock = "0.18"
# `Command` / `on_command` / `register_commands!` macros (re-exports
# from `lunco-command-macro`). Brings file-workflow verbs (`OpenFile`,
# `OpenFolder`, `OpenTwin`, ...) onto the same typed-command bus that
# domain crates already use.
lunco-core = { path = "../lunco-core" }
lunco-doc = { path = "../lunco-doc" }
# `SaveDocument` / `SaveAsDocument` / `CloseDocument` Command structs +
# `EditorIntent` rebindable verbs.
lunco-doc-bevy = { path = "../lunco-doc-bevy" }
lunco-twin = { path = "../lunco-twin", features = ["bevy"] }
lunco-workspace = { path = "../lunco-workspace" }
# `OpenFilter` / `SaveHint` / `StorageHandle` for the file-picker
# event API. Storage stays bevy-free; the workbench's picker fires
# rfd dialogs on native and (eventually) File-System-Access on wasm.
lunco-storage = { path = "../lunco-storage" }
# Used for the recents-changed fingerprint in `WorkspacePlugin` —
# stable serialisation lets us skip writes when nothing changed.
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
# `user_config_dir()` for cross-platform `~/.lunco/recents.json`
# (Windows: `C:\Users\<user>\.lunco\`, etc.).
lunco-assets = { path = "../lunco-assets" }
lunco-settings = { path = "../lunco-settings" }
# Native file dialogs. The web backend will use `wasm-bindgen`
# directly against the File-System-Access API behind a `cfg`-gated
# branch — no separate crate needed.
rfd = "0.15"
# `Instant::now()` panics on wasm32-unknown-unknown. The status bus
# stamps every event with a wall-clock instant, so we use the wasm-safe
# replacement on every target.
web-time = { workspace = true }

[dev-dependencies]
# For the hello_workbench example. The full DefaultPlugins pull in a winit
# window + renderer so the example produces an actual window.

[[example]]
name = "hello_workbench"
path = "examples/hello_workbench.rs"
