[package]
name = "lunco-workspace"
version = "0.1.0"
edition = "2021"
description = "LunCoSim's editor session (VS Code Workspace analog). Tracks open Twins + loose documents, the active Twin / Document / Perspective, and a recents list. Headless, UI-free, ECS-free — a Bevy `Resource` wrapper can be added in a consumer crate."

[dependencies]
lunco-doc     = { path = "../lunco-doc" }
lunco-twin    = { path = "../lunco-twin" }
lunco-storage = { path = "../lunco-storage" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
